# KernalFlow

./: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  CMakeSettings.json  README.md  build.bat  build.ps1  install_cuda_vs2026.bat  open_in_vs.bat  rewards.csv  run.ps1
benchmark/: bench_gemm.cu  bench_inference.cu  plot_results.py  results.csv
include/: environment.hpp  kernels.hpp  layers.hpp  model.hpp  replay_buffer.hpp  stream_engine.hpp  tensor.hpp
kernels/: activations.cu  gemm.cu  reduction.cu
layers/: linear.cu
rl/: dqn.cu  environment.cu  replay_buffer.cu
src/: model.cu  stream_engine.cu  tensor.cpp
tests/: test_model.cu  test_tensor.cu
viz/: kernel_profile.py  reward_plot.py
